--- a/styles/style.css
+++ b/styles/style.css
@@ -76,6 +76,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-block: 2rem;
     text-align: center;
 }
 
