--- a/styles/style.css
+++ b/styles/style.css
@@ -38,8 +38,13 @@ main {
 .output-section {
     background-color: var(--white);
     border-radius: 1.5rem;
-    height: 100vh;
-    width: 25rem;
+    height: auto;
+    max-width: 25rem;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
 }
 
 #input-textarea {
@@ -116,7 +121,7 @@ main {
     gap: 1.5rem;
 }
 
-.buttons button, #btn-copy {
+.buttons button {
     border-radius: 1.5rem;
     cursor: pointer;
     padding: 1.5rem;
@@ -146,8 +151,15 @@ main {
 }
 
 #btn-copy {
-    margin-top: 8rem;
-    margin-inline: 2rem;
+    align-self: center;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    margin: 1rem auto 0;
+    padding: 1.5rem;
+    width: 20.5rem;
+    height: 4.1875rem;
+    transition: 0.3s;
+    display: block;
 }
 
 footer {
