--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -14,6 +14,10 @@
         align-items: center;
     }
 
+    #input-textarea {
+        height: 4rem;
+    }
+
     .output-section {
         background-color: var(--white);
         border-radius: 1.5rem;
@@ -21,7 +25,7 @@
         max-width: 25rem;
         text-align: center;
         padding: 1rem;
-        margin-top: 2rem;
+        margin-top: 1rem;
         height: auto;
         display: flex;
         flex-direction: column;
